# herdr-palette

./: .gitignore  AGENTS.md  Cargo.toml  README.md  herdr-plugin.toml
.depot/workflows/: ci.yml
.github/workflows/: ci.yml
cargo/: herdr-plugin.toml
src/: dispatch.rs  items.rs  main.rs  source.rs  tui.rs
