[package]
name = "herdr-palette"
version = "0.1.10"
edition = "2021"
description = "A Raycast/Linear-style fuzzy command palette for Herdr"
license = "MIT"
repository = "https://github.com/ramarivera/herdr-palette"
homepage = "https://github.com/ramarivera/herdr-palette"
readme = "README.md"
keywords = ["herdr", "terminal", "tui", "palette", "ratatui"]
categories = ["command-line-utilities"]
exclude = [".depot/", ".github/", "AGENTS.md"]

[[bin]]
name = "herdr-palette"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
fuzzy-matcher = "0.3.7"
herdr-pretty-which = { version = "0.1.4", path = "../herdr-pretty-which" }
ratatui = "0.30.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.1"
insta = "1.44"
predicates = "3.1"
tempfile = "3.23"

[profile.release]
lto = "thin"
strip = true
